backend/tests/snapshots/rpc_snapshot__backlinks.snap
---
source: backend/tests/rpc_snapshot.rs
expression: responses
---
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "result": {
      "column": 0,
      "createdAt": "<ts>",
      "displayMarker": "<displayMarker>",
      "file": "/tmp/test.rs",
      "formattedCreatedAt": "<formatted_ts>",
      "formattedUpdatedAt": "<formatted_ts>",
      "hoverText": "<hoverText>",
      "iconHint": "fresh",
      "id": "<id>",
      "line": 1,
      "projectRoot": "/tmp",
      "shortId": "<shortId>",
      "stale": false,
      "summary": "Note A - the target",
      "tags": [],
      "text": "Note A - the target",
      "updatedAt": "<ts>"
    }
  },
  {
    "id": 2,
    "jsonrpc": "2.0",
    "result": {
      "column": 0,
      "createdAt": "<ts>",
      "displayMarker": "<displayMarker>",
      "file": "/tmp/test.rs",
      "formattedCreatedAt": "<formatted_ts>",
      "formattedUpdatedAt": "<formatted_ts>",
      "hoverText": "<hoverText>",
      "iconHint": "fresh",
      "id": "<id>",
      "line": 10,
      "projectRoot": "/tmp",
      "shortId": "<shortId>",
      "stale": false,
      "summary": "Note B links to [[target][<uuid>",
      "tags": [],
      "text": "Note B links to [[target][<uuid>]]",
      "updatedAt": "<ts>"
    }
  },
  {
    "id": 3,
    "jsonrpc": "2.0",
    "result": [
      {
        "column": 0,
        "createdAt": "<ts>",
        "displayMarker": "<displayMarker>",
        "file": "/tmp/test.rs",
        "formattedCreatedAt": "<formatted_ts>",
        "formattedUpdatedAt": "<formatted_ts>",
        "hoverText": "<hoverText>",
        "iconHint": "fresh",
        "id": "<id>",
        "line": 10,
        "projectRoot": "/tmp",
        "shortId": "<shortId>",
        "stale": false,
        "summary": "Note B links to [[target][<uuid>",
        "tags": [],
        "text": "Note B links to [[target][<uuid>]]",
        "updatedAt": "<ts>"
      }
    ]
  }
]
