backend/tests/snapshots/rpc_snapshot__create_and_list.snap
---
source: backend/tests/rpc_snapshot.rs
expression: responses
---
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "result": {
      "column": 2,
      "createdAt": "<ts>",
      "displayDetail": "/tmp/test.rs:3",
      "displayLabel": "[Note] snapshot note",
      "displayMarker": "<displayMarker>",
      "file": "/tmp/test.rs",
      "formattedCreatedAt": "<formatted_ts>",
      "formattedLines": [
        "  // snapshot note"
      ],
      "formattedUpdatedAt": "<formatted_ts>",
      "hoverText": "<hoverText>",
      "iconHint": "fresh",
      "id": "<id>",
      "line": 3,
      "projectRoot": "/tmp",
      "shortId": "<shortId>",
      "stale": false,
      "summary": "snapshot note",
      "tags": [
        "x"
      ],
      "text": "snapshot note",
      "updatedAt": "<ts>"
    }
  },
  {
    "id": 2,
    "jsonrpc": "2.0",
    "result": {
      "notes": [
        {
          "column": 2,
          "createdAt": "<ts>",
          "displayDetail": "/tmp/test.rs:3",
          "displayLabel": "[Note] snapshot note",
          "displayMarker": "<displayMarker>",
          "file": "/tmp/test.rs",
          "formattedCreatedAt": "<formatted_ts>",
          "formattedLines": [
            "  // snapshot note"
          ],
          "formattedUpdatedAt": "<formatted_ts>",
          "hoverText": "<hoverText>",
          "iconHint": "fresh",
          "id": "<id>",
          "line": 3,
          "projectRoot": "/tmp",
          "shortId": "<shortId>",
          "stale": false,
          "summary": "snapshot note",
          "tags": [
            "x"
          ],
          "text": "snapshot note",
          "updatedAt": "<ts>"
        }
      ]
    }
  }
]
