backend/tests/snapshots/rpc_snapshot__index_project.snap
---
source: backend/tests/rpc_snapshot.rs
expression: responses
---
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "result": {
      "indexed": 1,
      "ok": true,
      "projectRoot": "/tmp",
      "skipped": 0
    }
  },
  {
    "id": 2,
    "jsonrpc": "2.0",
    "result": [
      {
        "column": 3,
        "file": "/private/tmp/foo.rs",
        "kind": "file",
        "line": 1,
        "score": 1.0,
        "text": "fn foo() {}"
      }
    ]
  }
]
