backend/tests/snapshots/rpc_snapshot__invalid_params.snap
---
source: backend/tests/rpc_snapshot.rs
assertion_line: 334
expression: responses
---
[
  {
    "error": {
      "code": -32602,
      "message": "missing file"
    },
    "id": 1,
    "jsonrpc": "2.0"
  }
]
