backend/tests/snapshots/rpc_snapshot__list_by_node.snap
---
source: backend/tests/rpc_snapshot.rs
expression: responses
---
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "result": {
      "column": 1,
      "createdAt": "<ts>",
      "displayMarker": "<displayMarker>",
      "file": "/tmp/test.rs",
      "formattedCreatedAt": "<formatted_ts>",
      "formattedUpdatedAt": "<formatted_ts>",
      "hoverText": "<hoverText>",
      "iconHint": "fresh",
      "id": "<id>",
      "line": 5,
      "nodePath": [
        "fn",
        "body"
      ],
      "projectRoot": "/tmp",
      "shortId": "<shortId>",
      "stale": false,
      "summary": "by-node",
      "tags": [],
      "text": "by-node",
      "updatedAt": "<ts>"
    }
  },
  {
    "id": 2,
    "jsonrpc": "2.0",
    "result": [
      {
        "column": 1,
        "createdAt": "<ts>",
        "displayMarker": "<displayMarker>",
        "file": "/tmp/test.rs",
        "formattedCreatedAt": "<formatted_ts>",
        "formattedUpdatedAt": "<formatted_ts>",
        "hoverText": "<hoverText>",
        "iconHint": "fresh",
        "id": "<id>",
        "line": 5,
        "nodePath": [
          "fn",
          "body"
        ],
        "projectRoot": "/tmp",
        "shortId": "<shortId>",
        "stale": false,
        "summary": "by-node",
        "tags": [],
        "text": "by-node",
        "updatedAt": "<ts>"
      }
    ]
  }
]
