backend/tests/snapshots/rpc_snapshot__list_files.snap
---
source: backend/tests/rpc_snapshot.rs
expression: redacted
---
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "result": [
      {
        "file": "/private<root>/foo.txt",
        "size": 5
      }
    ]
  }
]
