backend/tests/snapshots/rpc_snapshot__snapshot_status.snap
---
source: backend/tests/rpc_snapshot.rs
expression: responses
---
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "result": {
      "bytes": 13,
      "content": "fn main() {}\n",
      "file": "/tmp/code.rs",
      "lines": 1,
      "projectRoot": "/tmp",
      "updatedAt": "<ts>"
    }
  },
  {
    "id": 2,
    "jsonrpc": "2.0",
    "result": {
      "counts": {
        "edges": 0,
        "embeddings": 1,
        "files": 1,
        "notes": 0
      },
      "ok": true,
      "projectRoot": "/tmp"
    }
  }
]
