backend/tests/snapshots/rpc_snapshot__unknown_method.snap
---
source: backend/tests/rpc_snapshot.rs
expression: responses
---
[
  {
    "error": {
      "code": -32601,
      "message": "unknown method: unknown/method"
    },
    "id": 99,
    "jsonrpc": "2.0"
  }
]
